Fix collapsable positioning on mobile

--- a/web/src/stylesheets/Entropy/pages/exchange-only/page--exchange-seller-listing.scss
+++ b/web/src/stylesheets/Entropy/pages/exchange-only/page--exchange-seller-listing.scss
@@ -678,6 +678,12 @@ div.window.dialog {
 
 }
 
+@media (max-width: 767px) {
+  .intervals > div div.miwt-collapsable-content {
+	right: 0;
+  }
+}
+
 @media (min-width: 768px) {
 
   div.bids, div.intervals {
